* xxx
  - [Breaking change] encode/1 returns a tuple, use encode!/1 to get the old
    behavior of encode/1
  - Raise RequiredFieldsError when encoding or decoding a Protobuf 2 message
    with unset required fields (that is, that have the value `nil`)
  - Raise IllegalTagError when decoding a message with a tag set to 0
  - +40% speedup & -30% memory consumption when decoding thanks to macro

* 0.22.0
  - O(1) encoding of oneof fields

* 0.21.0
  - Move back to ahamez/protox
  - Bump to Elixir 1.6 as minimal supported version
  - Add benchmarks
  - Add conformance tests to CI
  - Add dialyzer to CI

* 0.20.0
  - Pass all tests of protobuf 3.12 conformance suite tests
  - (proto2) Always serialize required fields
  - Add defs_by_name/0 in generated modules for messages
  - Add syntax/0 in generated modules for messages
  - Add Protox.Message.merge/2 to merge two messages of the same type
  - [Breaking change] (proto2) use nil for unset fields
  - [Breaking change] rename generated get_required_fields/0 into required_fields/0
  - [Breaking change] rename generated get_unknown_fields/0 into unknown_fields/0
  - [Breaking change] rename generated get_unknown_fields_name/0 into unknown_fields_name/0

* 0.19.1
  - Fix warning about duplicate keys (thanks to https://github.com/ananthakumaran)

* 0.19.0
  - CamelCase for all generated modules (fixes https://github.com/ahamez/protox/issues/3)

* 0.18.0
  - Allow ability to construct file names at compile time (thanks to https://github.com/ananthakumaran)

* 0.17.0
  - Add path: option to specify import path (thanks to https://github.com/mathsaey)

* 0.16.2
  - Fix generation of typespecs for when there are more than one required field

* 0.16.1
  - Change base name for unknown fields from '__unknown_fields__' to '__uf__'

* 0.16.0
  - Fix handling of +/-infinity and NaN when encoding/decoding floats
  - Move RandomInit to tests

* 0.15.2
  - Fix typespecs for enum constants accessors

* 0.15.1